--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,13 +44,25 @@ image = "0.25.4"
 [target.'cfg(target_os = "macos")'.dependencies]
 macos-accessibility-client = "0.0.1"
 window-shadows = "0.2"
+core-graphics = "0.22.3"
 
 [target.'cfg(windows)'.dependencies]
-windows = {version="0.58.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Globalization", "Storage", "Storage_Streams"] }
+windows = { version = "0.58.0", features = [
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Foundation",
+    "Win32_UI_Input_KeyboardAndMouse",
+    "Graphics_Imaging",
+    "Media_Ocr",
+    "Foundation",
+    "Globalization",
+    "Storage",
+    "Storage_Streams"
+]}
 window-shadows = "0.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 #openssl
+x11 = { version = "2.21.0", features = ["xlib", "xtest"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
